added: postman env & postman collection

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,10 @@
             <a href="/docs/user">User</a>
         </li>
         <li>
-            <a href="/docs/category">category</a>
+            <a href="/docs/category">Category</a>
+        </li>
+        <li>
+            <a href="/docs/cart">Cart</a>
         </li>
     </ul>
 </body>
