--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -25,10 +25,32 @@
             border-radius: 4px;
             font-size: 90%;
         }
+        .header-wrapper{
+            display: flex;
+            height: 100%;
+            align-items: center;
+        }
+        .backIcon{
+            margin-right: 10px;
+            padding-left: 6px;
+            padding-right: 6px;
+        }
+        .backIcon:hover{
+            background-color: #f4f4f4;
+            border-radius: 100%;
+        }
+        a{
+            color: black    ;
+        }
     </style>
 </head>
 <body>
-    <h1><%= title %></h1>
+    <div class="header-wrapper">
+        <a href="/">
+            <svg class="backIcon" xmlns="http://www.w3.org/2000/svg" width="12" height="24" viewBox="0 0 12 24"><path fill="currentColor" fill-rule="evenodd" d="m3.343 12l7.071 7.071L9 20.485l-7.778-7.778a1 1 0 0 1 0-1.414L9 3.515l1.414 1.414z"/></svg>    
+        </a>
+        <h1><%= title %></h1>    
+    </div>
     <table>
         <thead>
             <tr>
