--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <style>
         body {
@@ -24,6 +25,10 @@
             padding: 2px 4px;
             border-radius: 4px;
             font-size: 90%;
+        }
+        .table-wrapper{
+            overflow-x: scroll;
+            padding-bottom: 40px;
         }
         .header-wrapper{
             display: flex;
@@ -51,31 +56,33 @@
         </a>
         <h1><%= title %></h1>    
     </div>
-    <table>
-        <thead>
-            <tr>
-                <th>Method</th>
-                <th>Endpoint</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% apis.forEach(api => { %>
+    <div class="table-wrapper">
+        <table>
+            <thead>
                 <tr>
-                    <td><strong><%= api.method %></strong></td>
-                    <td><code><%= api.endpoint %></code></td>
-                    <td><%= api.description %></td>
+                    <th>Method</th>
+                    <th>Endpoint</th>
+                    <th>Description</th>
                 </tr>
-                <% if (api.example) { %>
+            </thead>
+            <tbody>
+                <% apis.forEach(api => { %>
                     <tr>
-                        <td colspan="3">
-                            <strong>Example Request:</strong>
-                            <pre><code><%= api.example %></code></pre>
-                        </td>
+                        <td><strong><%= api.method %></strong></td>
+                        <td><code><%= api.endpoint %></code></td>
+                        <td><%= api.description %></td>
                     </tr>
-                <% } %>
-            <% }); %>
-        </tbody>
-    </table>
+                    <% if (api.example) { %>
+                        <tr>
+                            <td colspan="3">
+                                <strong>Example Request:</strong>
+                                <pre><code><%= api.example %></code></pre>
+                            </td>
+                        </tr>
+                    <% } %>
+                <% }); %>
+            </tbody>
+        </table>    
+    </div>
 </body>
 </html>
